table head spacing fix

--- a/style/style.css
+++ b/style/style.css
@@ -367,13 +367,13 @@ body {
 .song-data-header {
   /* border-radius: 0.2rem; */
   padding: 0 3rem 1rem 3rem;
-
+  color: rgba(215, 215, 215, 0.7);
   /* opacity: 0.7; */
 }
 
 th,
 td {
-  padding: 1rem 3rem;
+  padding: 1rem 0.5rem;
 }
 
 .duration-icon {
